--- a/FabrikamFiber.Web.PureSeleniumTests/FabrikamFiber.Web.PureSeleniumTests.csproj
+++ b/FabrikamFiber.Web.PureSeleniumTests/FabrikamFiber.Web.PureSeleniumTests.csproj
@@ -106,7 +106,8 @@
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(SolutionDir)runsettings.runsettings $(TargetDir)* /y</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
