--- a/FabrikamFiber.Web.Tests/App.config
+++ b/FabrikamFiber.Web.Tests/App.config
@@ -6,6 +6,7 @@
 <configuration>
   <appSettings>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="Ambiente" value="Testing"/>
   </appSettings>
   <connectionStrings>
   </connectionStrings>
