--- a/FabrikamFiber.Web.Tests/App.config
+++ b/FabrikamFiber.Web.Tests/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- 
     Note: Add entries to the App.config file for configuration settings
     that apply only to the Test project.
 -->
 <configuration>
   <appSettings>
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
     <add key="Ambiente" value="Testing"/>
   </appSettings>
   <connectionStrings>
@@ -13,42 +13,42 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="xunit" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.2.1705" newVersion="1.9.2.1705" />
+        <assemblyIdentity name="xunit" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.9.2.1705" newVersion="1.9.2.1705"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="WeatherSoap" />
+        <binding name="WeatherSoap"/>
       </basicHttpBinding>
       <customBinding>
         <binding name="WeatherSoap12">
-          <textMessageEncoding messageVersion="Soap12" />
-          <httpTransport />
+          <textMessageEncoding messageVersion="Soap12"/>
+          <httpTransport/>
         </binding>
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://wsf.cdyne.com/WeatherWS/Weather.asmx" binding="basicHttpBinding" bindingConfiguration="WeatherSoap" contract="WeatherOutageService.WeatherSoap" name="WeatherSoap" />
-      <endpoint address="http://wsf.cdyne.com/WeatherWS/Weather.asmx" binding="customBinding" bindingConfiguration="WeatherSoap12" contract="WeatherOutageService.WeatherSoap" name="WeatherSoap12" />
+      <endpoint address="http://wsf.cdyne.com/WeatherWS/Weather.asmx" binding="basicHttpBinding" bindingConfiguration="WeatherSoap" contract="WeatherOutageService.WeatherSoap" name="WeatherSoap"/>
+      <endpoint address="http://wsf.cdyne.com/WeatherWS/Weather.asmx" binding="customBinding" bindingConfiguration="WeatherSoap12" contract="WeatherOutageService.WeatherSoap" name="WeatherSoap12"/>
     </client>
   </system.serviceModel>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
       </providers>
     </roleManager>
   </system.web>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
