--- a/FabrikamFiber.Web/Web.config
+++ b/FabrikamFiber.Web/Web.config
@@ -1,41 +1,45 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  
-    <connectionStrings>
-      <add name="FabrikamFiber-Express" connectionString="data source=VM02-TFSDB;Integrated Security=true;Initial Catalog=FabrikamFiber-Express" providerName="System.Data.SqlClient" />
-      <!--<add name="ApplicationServices" connectionString="data source=localhost;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
-      <add name="FabrikamFiber-DataWarehouse" connectionString="data source=VM02-TFSDB;User Id=vmuser; Password=Password~1; Initial Catalog=FabrikamFiber-Express" providerName="System.Data.SqlClient" />
+  <connectionStrings>
+    <add name="FabrikamFiber-Express" connectionString="data source=LEADRO-2022\SQLEXPRESS;Integrated Security=true;Initial Catalog=FabrikamFiber" providerName="System.Data.SqlClient"/>
+	<add name="FabrikamFiber-DataWarehouse" connectionString="data source=LEADRO-2022\SQLEXPRESS;Integrated Security=true;Initial Catalog=FabrikamFiber" providerName="System.Data.SqlClient"/>
+	<!--<add name="ApplicationServices" connectionString="data source=localhost;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
-  
   <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="webpages:Version" value="2.0.0.0"/>
+    <add key="PreserveLoginUrl" value="true"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="Ambiente" value="Local"/>
   </appSettings>
-  
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <httpRuntime requestValidationMode="2.0" />
-    <compilation debug="true" targetFramework="4.0">
+    <httpRuntime requestValidationMode="2.0"/>
+    <compilation debug="true" targetFramework="4.8">
       <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
-    <authentication mode="None" />
+    <authentication mode="None"/>
     <authorization>
-      <allow users="*" />
+      <allow users="*"/>
     </authorization>
-
     <!--<authentication mode="Windows" />
     <authorization>
       <deny users="?" />
@@ -63,39 +67,36 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>-->
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
-  
-    <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
-  
-    <runtime>
-      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-        <dependentAssembly>
-          <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-          <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0" />
-        </dependentAssembly>
-        <dependentAssembly>
-          <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-          <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-        </dependentAssembly>
-        <dependentAssembly>
-          <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-          <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0" />
-        </dependentAssembly>
-         <dependentAssembly>
-            <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
-            <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
-         </dependentAssembly>
-      </assemblyBinding>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
-  
-    <system.data>
+  <system.data>
     <DbProviderFactories>
-      <remove invariant="System.Data.SqlServerCe.4.0" />
-      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      <remove invariant="System.Data.SqlServerCe.4.0"/>
+      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </DbProviderFactories>
   </system.data>
-
 </configuration>
