--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -89,12 +89,26 @@ stages:
       runOnce:
         deploy:
           steps:
-          - script: echo my first deployment
-          - task: PowerShell@2
+          - script: HOSTNAME
+          - task: Tokenizer@2
             inputs:
-              targetType: 'inline'
-              script: |
-                Get-ComputerInfo
+              SourcePath: '$(System.DefaultWorkingDirectory)/_FabrikamFiber.Build/WebApp/FabrikamFiber.Web.SetParameters.xml'
+
+          - task: IISWebAppManagementOnMachineGroup@0
+            displayName: 'IIS Web App Manage'
+            inputs:
+              IISDeploymentType: 'IISWebsite'
+              ActionIISWebsite: 'CreateOrUpdateWebsite'
+              WebsiteName: 'FabrikamFiber-DEV'
+              WebsitePhysicalPath: '%SystemDrive%\inetpub\wwwroot\FabrikamFiber-DEV'
+              WebsitePhysicalPathAuth: 'WebsiteUserPassThrough'
+              AddBinding: true
+              Bindings: '{"bindings":[{"protocol":"http","ipAddress":"All Unassigned","port":"8080","hostname":"","sslThumbprint":"","sniFlag":false}]}'
+              CreateOrUpdateAppPoolForWebsite: true
+              AppPoolNameForWebsite: 'AppPool-FabrikamFiber-DEV'
+              DotNetVersionForWebsite: 'v4.0'
+              PipeLineModeForWebsite: 'Integrated'
+              AppPoolIdentityForWebsite: 'ApplicationPoolIdentity'
 
 - stage: prod
   dependsOn: QA
