Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -125,7 +125,7 @@ stages:
               TaskType: 'dacpac'
               DacpacFile: '$(Pipeline.Workspace)/DacPac/FabrikamFiber.Database/bin/Release/FabrikamFiber.Database.dacpac'
               TargetMethod: 'server'
-              ServerName: 'LEADRO-2022\\SQLEXPRESS'
+              ServerName: 'LEADRO-2022\SQLEXPRESS'
               DatabaseName: 'FabrikamFiber-DEV'
               AuthScheme: 'sqlServerAuthentication'
               SqlUsername: 'FabrikamFiber-DB'
@@ -178,7 +178,7 @@ stages:
               TaskType: 'dacpac'
               DacpacFile: '$(Pipeline.Workspace)/DacPac/FabrikamFiber.Database/bin/Release/FabrikamFiber.Database.dacpac'
               TargetMethod: 'server'
-              ServerName: 'LEADRO-2022\\SQLEXPRESS'
+              ServerName: 'LEADRO-2022\SQLEXPRESS'
               DatabaseName: 'FabrikamFiber-PRD'
               AuthScheme: 'sqlServerAuthentication'
               SqlUsername: 'FabrikamFiber-DB'
