Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -127,6 +127,19 @@ stages:
               TargetMethod: 'connectionString'
               ConnectionString: '$(FabrikamFiber-Express-ConnString)'
 
+          - task: PowerShell@2
+            displayName: 'Generate SQL Script'
+            inputs:
+              targetType: 'inline'
+              script: |
+                Write-Host "Create SQL script"
+                C:\Program Files\Microsoft SQL Server\160\DAC\bin\SqlPackage.exe /a:script /SourceFile:$(Pipeline.Workspace)/DacPac/FabrikamFiber.Database/bin/Release/FabrikamFiber.Database.dacpac /TargetConnectionString:$(FabrikamFiber-Express-ConnString) /OutputPath:$(Pipeline.Workspace)/SQL_DEV
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Pipeline.Workspace)/SQL_DEV'
+              ArtifactName: 'SQL_DEV'
+              publishLocation: 'Container'
+
 - stage: prod
   dependsOn: qa
   variables:
