Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -135,7 +135,8 @@ stages:
               script: |
                 Write-Host "Create SQL script"
                 cd  'C:\Program Files\Microsoft SQL Server\160\DAC\bin'
-                SqlPackage.exe /a:script /SourceFile:$(Pipeline.Workspace)/DacPac/FabrikamFiber.Database/bin/Release/FabrikamFiber.Database.dacpac /TargetConnectionString:$(FabrikamFiber-Express-ConnString) /OutputPath:$(Pipeline.Workspace)/SQL_DEV
+                Get-Location
+                .\SqlPackage.exe /a:script /SourceFile:$(Pipeline.Workspace)/DacPac/FabrikamFiber.Database/bin/Release/FabrikamFiber.Database.dacpac /TargetConnectionString:$(FabrikamFiber-Express-ConnString) /OutputPath:$(Pipeline.Workspace)/SQL_DEV
           - task: PublishBuildArtifacts@1
             inputs:
               PathtoPublish: '$(Pipeline.Workspace)/SQL_DEV'
