Update azure-pipeline-template.yml for Azure Pipelines

--- a/azure-pipeline-template.yml
+++ b/azure-pipeline-template.yml
@@ -14,7 +14,7 @@ extends:
   parameters:
     language: 'dotnet'
     poolName: 'windows-latest'
-    testProject: '**\$(BuildConfiguration)\FabrikamFiber.Web.Tests.dll'
+    #testProject: '**\$(BuildConfiguration)\FabrikamFiber.Web.Tests.dll'
     #environments:
     # - name: 'dev'
     #   target: 'azure-webapp'
