--- a/FabrikamFiber.Web/Web.config
+++ b/FabrikamFiber.Web/Web.config
@@ -15,6 +15,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="Ambiente" value="Local" />
+	<add key="AzureAd" value="VR28Q~1g~sHITeY5NE8BcaImkYLOMswPKtTubabM"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
