chore: atualizar configuração do pipeline de CI/CD
Descomentei a seção de push no fluxo de trabalho e ajustei o caminho de publicação para usar a variável do GitHub, garantindo que os artefatos sejam corretamente armazenados no diretório de trabalho do GitHub Actions.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,9 @@
 name: Build, Test and Deploy
 
 on:
-  push:
-    branches:
-      - main
+  #push:
+  #  branches:
+  #    - master
   workflow_dispatch:
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
         run: nuget restore FabrikamFiber.CallCenter.sln
 
       - name: Build Solution
-        run: msbuild FabrikamFiber.CallCenter.sln /p:Configuration=Release /p:Platform="Any CPU" /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(System.DefaultWorkingDirectory)\WebDeploy" /p:AutoParameterizationWebConfigConnectionStrings=false
+        run: msbuild FabrikamFiber.CallCenter.sln /p:Configuration=Release /p:Platform="Any CPU" /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="${{ github.workspace }}\WebDeploy" /p:AutoParameterizationWebConfigConnectionStrings=false
 
       - name: Run Tests
         run: |
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: WebApp
-          path: WebDeploy
+          path: ${{ github.workspace }}\WebDeploy
 
       - name: Archive DACPAC
         uses: actions/upload-artifact@v4
