--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/Common7/IDE/Extensions/TestPlatform/vstest.console.exe" **/Release/FabrikamFiber.Web.Tests.dll /TestCaseFilter:"TestCategory=Required" /EnableCodeCoverage
+          "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/Common7/IDE/Extensions/TestPlatform/vstest.console.exe" ${{ github.workspace }}\FabrikamFiber.Web.Tests\bin\Release\FabrikamFiber.Web.Tests.dll /TestCaseFilter:"TestCategory=Required" /EnableCodeCoverage
 
       - name: Archive WebDeploy
         uses: actions/upload-artifact@v4
