chore: adicionar tipo de pacote na etapa de implantação
Foi adicionado o tipo de pacote como ZIP na configuração da etapa de implantação no pipeline. Essa alteração visa garantir que o formato correto do pacote seja utilizado durante o processo de implantação.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,6 +70,7 @@ jobs:
           resource-group-name: rg-fabrikamfiber-qa
           app-name: app-fabrikamfiber-qa
           package: "WebApp/FabrikamFiber.Web.zip"
+          type: ZIP
 
   deploy_prod:
     needs: deploy_qa
