chore: atualizar caminho do pacote na etapa de implantação
Modificado o caminho do pacote na configuração do pipeline para simplificar a estrutura de diretórios. A mudança remove a especificação do tipo de pacote, permitindo uma abordagem mais flexível na implantação.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,8 +69,7 @@ jobs:
         with:
           resource-group-name: rg-fabrikamfiber-qa
           app-name: app-fabrikamfiber-qa
-          package: "WebApp/FabrikamFiber.Web.zip"
-          type: ZIP
+          package: "WebApp"
 
   deploy_prod:
     needs: deploy_qa
