chore: atualizar método de publicação no pipeline
Modifica a etapa de construção no pipeline para usar o método de publicação de sistema de arquivos em vez de pacote.
Isso simplifica o processo de implantação e melhora a flexibilidade na gestão dos arquivos gerados.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,8 +19,11 @@ jobs:
       - name: Restore NuGet Packages
         run: nuget restore FabrikamFiber.CallCenter.sln
 
+      #- name: Build Solution
+      #  run: msbuild FabrikamFiber.CallCenter.sln /p:Configuration=Release /p:Platform="Any CPU" /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="${{ github.workspace }}\WebDeploy" /p:AutoParameterizationWebConfigConnectionStrings=false
+
       - name: Build Solution
-        run: msbuild FabrikamFiber.CallCenter.sln /p:Configuration=Release /p:Platform="Any CPU" /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="${{ github.workspace }}\WebDeploy" /p:AutoParameterizationWebConfigConnectionStrings=false
+        run: msbuild FabrikamFiber.CallCenter.sln /p:Configuration=Release /p:Platform="Any CPU" /p:DeployOnBuild=true /p:WebPublishMethod=FileSystem /p:OutDir="${{ github.workspace }}\WebDeploy"
 
       - name: Run Tests
         run: |
