chore: atualizar nomes e caminhos no pipeline
Modifica os nomes dos artefatos arquivados no pipeline, alterando 'WebApp' para '_PublishedWebsites' e ajustando o caminho para os websites publicados.
Além disso, o caminho para o arquivo DACPAC foi atualizado para refletir a nova estrutura de diretórios.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,23 +32,14 @@ jobs:
       - name: Archive WebDeploy
         uses: actions/upload-artifact@v4
         with:
-          name: WebApp
-          path: ${{ github.workspace }}\WebDeploy
+          name: _PublishedWebsites
+          path: ${{ github.workspace }}\WebDeploy\_PublishedWebsites\FabrikamFiber.Web\*
 
-      - name: Archive DACPAC
+      - name: Archive DacPac
         uses: actions/upload-artifact@v4
         with:
           name: DacPac
-          path: '**/FabrikamFiber.Database/bin/Release/*.dacpac'
-
-      - name: Archive Selenium Content
-        uses: actions/upload-artifact@v4
-        with:
-          name: Selenium
-          path: |
-            **/FabrikamFiber.Web.PureSeleniumTests/bin/Release/**
-            **/*.testsettings
-            **/*.runsettings
+          path: ${{ github.workspace }}\WebDeploy\*.dacpac
 
   deploy_qa:
     needs: build
