chore: adicionar compressão do site publicado no pipeline
Adiciona uma etapa para compactar o site publicado em um arquivo ZIP antes de arquivá-lo.
Isso melhora a organização dos artefatos gerados e facilita o download e a manipulação dos arquivos.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,11 +29,16 @@ jobs:
         run: |
           & "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" "${{ github.workspace }}\WebDeploy\FabrikamFiber.Web.Tests.dll" /TestCaseFilter:"TestCategory=Required" /EnableCodeCoverage
       
+
+      - name: Zip Published Website
+        run: |
+          Compress-Archive -Path "${{ github.workspace }}\WebDeploy\_PublishedWebsites\FabrikamFiber.Web\*" -DestinationPath "${{ github.workspace }}\WebDeploy\_PublishedWebsites\FabrikamFiber.Web.zip"
+
       - name: Archive WebDeploy
         uses: actions/upload-artifact@v4
         with:
           name: _PublishedWebsites
-          path: ${{ github.workspace }}\WebDeploy\_PublishedWebsites\FabrikamFiber.Web\*
+          path: ${{ github.workspace }}\WebDeploy\_PublishedWebsites\FabrikamFiber.Web.zip
 
       - name: Archive DacPac
         uses: actions/upload-artifact@v4
