chore: atualizar caminho do pacote no pipeline
Modificado o caminho do pacote para a publicação no pipeline de implantação, alterando de "WebApp" para "_PublishedWebsites/FabrikamFiber.Web.zip". Essa mudança garante que o pacote correto seja utilizado durante o processo de implantação.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           resource-group-name: rg-fabrikamfiber-qa
           app-name: app-fabrikamfiber-qa
-          package: "WebApp"
+          package: "_PublishedWebsites/FabrikamFiber.Web.zip"
 
   deploy_prod:
     needs: deploy_qa
@@ -92,4 +92,4 @@ jobs:
       #  with:
       #    resource-group-name: rg-fabrikamfiber-qa
       #    app-name: app-fabrikamfiber-qa
-      #    package: "WebApp"
+      #    package: "_PublishedWebsites/FabrikamFiber.Web.zip"
